--- a/vcweb/core/templates/includes/nav-menu.html
+++ b/vcweb/core/templates/includes/nav-menu.html
@@ -15,10 +15,10 @@
         <div class='container'>
             <ul class='nav'>
                 {% block headerlinks %}
-                <li class='{% active request home %}' ><a href='{{ home }}' class='first'><i class='icon-home'></i> Home</a></li>
-                <li class='{% active_re request dashboard %}'><a href='{{ dashboard }}'><i class='icon-th-large'></i> Dashboard</a></li>
-                <li class='{% active request contact %}'><a href='{{ contact }}'><i class='icon-bell'></i> Contact us</a></li>
-                <li><a href='https://bitbucket.org/virtualcommons/vcweb/issues'><i class='icon-bullhorn'></i> Report a Bug</a></li>
+                <li class='{% active request home %}' ><a href='{{ home }}' class='first'><i class='fa fa-home'></i> Home</a></li>
+                <li class='{% active_re request dashboard %}'><a href='{{ dashboard }}'><i class='fa fa-th-large'></i> Dashboard</a></li>
+                <li class='{% active request contact %}'><a href='{{ contact }}'><i class='fa fa-bell-o'></i> Contact us</a></li>
+                <li><a href='https://bitbucket.org/virtualcommons/vcweb/issues'><i class='fa fa-bullhorn'></i> Report a Bug</a></li>
                 {% if request.user.is_authenticated %}
                 <li class='{% active request logout %}'><a href='{{ logout }}'>Logout</a></li>
                 {% else %}
