--- a/vcweb/core/templates/account/login.html
+++ b/vcweb/core/templates/account/login.html
@@ -14,7 +14,7 @@
             </p>
             {% include "includes/bootstrap-form.html" %}
             <div class='controls'>
-                <button type='submit' class='btn btn-primary'><i class='icon-user'></i> Login</button>
+                <button type='submit' class='btn btn-primary'><i class='fa fa-user'></i> Login</button>
             </div>
             {% comment %}
             FIXME: disabling social auth until its more thoroughly debugged (and we know what social platforms we want to
