--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -35,21 +35,21 @@
                 <li><a class='brand {% active request home %}' href='{{ home}}'><img class='logo' src='{{STATIC_URL}}images/vcweb-logo.png' width='30' height='23' alt='vcweb logo'/>virtual commons</a></li>
                 {% if request.user.is_authenticated %}
                 {% if request.user.participant %}
-                <li class='{% active_re request participate %}'><a href='{{ participate }}'><i class='icon-group'></i> Participate</a></li>
+                <li class='{% active_re request participate %}'><a href='{{ participate }}'><i class='fa fa-users'></i> Participate</a></li>
                 {% elif request.user.experimenter %}
-                <li class='{% active_re request dashboard %}'><a href='{{ dashboard }}'><i class='icon-dashboard'></i> Dashboard</a></li>
-                <li class='{% active_re request subjectpool %}'><a href='{{ subjectpool }}'><i class='icon-group'></i> Subject recruitment</a></li>
+                <li class='{% active_re request dashboard %}'><a href='{{ dashboard }}'><i class='fa fa-tachometer'></i> Dashboard</a></li>
+                <li class='{% active_re request subjectpool %}'><a href='{{ subjectpool }}'><i class='fa fa-users'></i> Subject recruitment</a></li>
                 {% endif %}
                 {% endif %}
-                <li class='{% active request contact %}'><a href='{{ contact }}'><i class='icon-bell'></i> Contact us</a></li>
-                <li><a target='_blank' href='https://bitbucket.org/virtualcommons/vcweb/issues/new'><i class='icon-bullhorn'></i> Report a Bug</a></li>
+                <li class='{% active request contact %}'><a href='{{ contact }}'><i class='fa fa-bell-o'></i> Contact us</a></li>
+                <li><a target='_blank' href='https://bitbucket.org/virtualcommons/vcweb/issues/new'><i class='fa fa-bullhorn'></i> Report a Bug</a></li>
             </ul>
             {% endblock headerlinks %}
             {% block login %}
             <ul class='nav pull-right'>
                 {% if request.user.is_authenticated %}
                 <li class='{% active request login %} dropdown'>
-                <a class='dropdown-toggle' data-toggle='dropdown' href='#'>{{request.user.email}}<i class='icon-cog'></i><b class='caret'></b></a>
+                <a class='dropdown-toggle' data-toggle='dropdown' href='#'>{{request.user.email}}<i class='fa fa-cog'></i><b class='caret'></b></a>
                     <ul class='dropdown-menu'>
                         <li><a href='{{ profile }}'>Account</a></li>
                         <li><a href='{{ logout }}'>Logout</a></li>
@@ -62,7 +62,7 @@
                     {% else %}
                     <a href='https://{{request.get_host}}{{ login }}'>
                     {% endif %}
-                    <i class='icon-cog'></i> Sign In</a>
+                    <i class='fa fa-cog'></i> Sign In</a>
                 </li>
                 {% endif %}
             </ul>
@@ -82,7 +82,7 @@
     {% if DEBUG %}
     <div class='alert alert-error alert-block'>
         <h2>Development Server</h2>
-        <i class='icon-warning-sign icon-2x'></i>You are accessing a <b>development version</b> of the vcweb software.  Any changes you make here will <b>NOT</b>
+        <i class='fa fa-exclamation-triangle fa-2x'></i>You are accessing a <b>development version</b> of the vcweb software.  Any changes you make here will <b>NOT</b>
         be persistent.
     </div>
     {% endif %}
