--- a/vcweb/core/templates/experimenter/dashboard.html
+++ b/vcweb/core/templates/experimenter/dashboard.html
@@ -6,16 +6,16 @@
 {% comment %} FIXME: UI refinement needed as the list of experiments grows {% endcomment %}
 <div id='dashboard'>
     <ul class='nav nav-tabs'>
-        <li class='active'><a href='#running' data-toggle='tab'><i class='icon-wrench'></i> Running experiments</a></li>
-        <li><a href='#pending' data-toggle='tab'><i class='icon-wrench'></i> Pending experiments</a></li>
-        <li><a href='#archived' data-toggle='tab'><i class='icon-archive'></i> Archived experiments</a></li>
-        <li><a href='#start' data-toggle='tab'><i class='icon-beaker'></i> Start a new experiment</a></li>
+        <li class='active'><a href='#running' data-toggle='tab'><i class='fa fa-wrench'></i> Running experiments</a></li>
+        <li><a href='#pending' data-toggle='tab'><i class='fa fa-wrench'></i> Pending experiments</a></li>
+        <li><a href='#archived' data-toggle='tab'><i class='fa fa-archive'></i> Archived experiments</a></li>
+        <li><a href='#start' data-toggle='tab'><i class='fa fa-flask'></i> Start a new experiment</a></li>
     </ul>
     <div class='tab-content'>
         <div class='tab-pane' id='start'>
             <div data-bind='foreach: sortedExperimentMetadataList'>
                 <h3><span data-bind='text: title'></span>
-                    <i style='cursor: pointer;' data-bind='click: $root.toggleExperimentMetadataBookmark.bind($data), css: { "icon-star-empty": ! bookmarked(), "icon-star text-gold": bookmarked}'></i>
+                    <i style='cursor: pointer;' class="fa" data-bind='click: $root.toggleExperimentMetadataBookmark.bind($data), css: { "fa-star-o": ! bookmarked(), "fa-star text-gold": bookmarked}'></i>
                 </h3>
                 <div data-bind='foreach: configurations'>
                     <div class='alert alert-message'>
@@ -23,8 +23,8 @@
                         <span data-bind='text: number_of_rounds'></span> rounds, groups of <span data-bind='text: max_group_size'></span>
                         <br>
                         <div class='btn-group'>
-                            <a class='btn' data-bind='click: $root.createNewExperiment.bind($data)'><i class='icon-plus-sign'></i> start new experiment</a>
-                            <a class='btn' disabled data-bind='click: $root.modify'><i class='icon-edit'></i> edit configuration</a>
+                            <a class='btn' data-bind='click: $root.createNewExperiment.bind($data)'><i class='fa fa-plus-circle'></i> start new experiment</a>
+                            <a class='btn' disabled data-bind='click: $root.modify'><i class='fa fa-pencil-square-o'></i> edit configuration</a>
                         </div>
                     </div>
                 </div>
@@ -60,23 +60,23 @@
     <div class='alert alert-message'>
     <h4><span data-bind='text: status_line'></span> <span class='pull-right'><span data-bind='text: participantCount' class='badge badge-important'></span> participants</span></h4>
     <div class='btn-group'>
-        <a class='btn' data-bind='attr: { href: monitor_url }'><i class='icon-zoom-in'></i> monitor</a>
+        <a class='btn' data-bind='attr: { href: monitor_url }'><i class='fa fa-search-plus'></i> monitor</a>
         <button class='btn' data-content='Creates a new copy of this experiment with the same configuration and no participants.'
-            data-bind='click: $root.cloneExperiment'><i class='icon-copy'></i> clone</button>
+            data-bind='click: $root.cloneExperiment'><i class='fa fa-files-o'></i> clone</button>
         <button class='btn' data-content='Register participants for this experiment with actual email addresses'
             data-bind='enable: $root.canRegisterParticipants($data), click: $root.gotoExperimentUrl.bind($data, "register-email-list")'>
-            <i class='icon-group'></i> register participants</button>
+            <i class='fa fa-users'></i> register participants</button>
         <button class='btn' data-content='Register participants for this experiment with fake email addresses by providing an email suffix and the number of participants.'
             data-bind='enable: $root.canRegisterParticipants($data), click: $root.gotoExperimentUrl.bind($data, "register-test-participants")'>
-            <i class='icon-group'></i> test participants</button>
+            <i class='fa fa-users'></i> test participants</button>
         <button data-content='Remove all participants from the experiment, including any data they may have generated.'
             data-action='clear-participants'
             data-bind='enable: $root.canClearParticipants($data), click: $root.clearParticipants' class='btn'>
-            <i class='icon-trash'></i> clear all participants</button>
+            <i class='fa fa-trash-o'></i> clear all participants</button>
         <button data-action='complete' data-content='Archive and mark this experiment as completed'
-            data-bind='disable: isArchived, click: $root.archive' class='btn'><i class='icon-save'></i> archive</button>
+            data-bind='disable: isArchived, click: $root.archive' class='btn'><i class='fa fa-floppy-o'></i> archive</button>
         <button data-action='deactivate' data-content='Flag this experiment as inactive'
-            data-bind='disable: isArchived, click: $root.deactivate' class='btn'><i class='icon-off'></i> deactivate</button>
+            data-bind='disable: isArchived, click: $root.deactivate' class='btn'><i class='fa fa-power-off'></i> deactivate</button>
     </div>
 </div>
 </script>
