--- a/vcweb/subject_pool/templates/subject-pool/experimenter-index.html
+++ b/vcweb/subject_pool/templates/subject-pool/experimenter-index.html
@@ -153,7 +153,7 @@ Experiment Session Management
                             </tr>
                             <tr>
                                 <td>
-                                    <input type="text" name="location" placeholder="Location(e.g., online, campus building)" data-bind='value: location, enable: editable' />
+                                    <input type="text" name="location" placeholder="Location(e.g., online)" data-bind='value: location, enable: editable' />
                                 </td>
                                 <td>
                                     <span class="label label-info session-label">End Date/Time: </span>
